sass/theme/_theme.scss
/* ... */
.card-columns.card-horizontal {
  @include media-breakpoint-up(lg) {
    column-count: 2;
  }
  @include media-breakpoint-down(md) {
    column-count: 1;
  }
}

.side-quote {
  color: $primary;
  font-size: $font-size-lg;
  font-weight: 700;
  margin-top: 100px;
}

.lead {
  font-size: $font-size-base * 1.25;
  letter-spacing: $tighter-letter-spacing;
}

.btn {
  letter-spacing: $tight-letter-spacing;
}

/* Beaver Builder Overrides */

.wrapper {
  &#full-width-page-wrapper {
    #content {
      padding: 0;
      margin: 0;
      max-width: none;
      width: auto;
      .entry-header {
        /* make this a container with fixed width */
        margin-left: auto;
        margin-right: auto;
        @include make-container-max-widths();
        padding-left: 15px;
        padding-right: 15px;
      }
    }
  } 
  &.has-hero {
    padding-top: 0;
    .hero-header {
      position: relative;
      background-color: rgba($black, .85);
      overflow: visible;
      margin-bottom: $spacer * 3;
      &.overlay:before {
        position: absolute;
        content:" ";
        top:0;
        left:0;
        width:100%;
        height:100%;
        display: block;
        z-index:0;
        background-color: rgba($black, 0.5);
      }
      * {
        position: relative;
      }
      h1 {
        color: $gray-100;
        text-align: center;
      }
      .lead {
        color: $gray-100;
        text-align: center;
      }
    }
  }
}

.fl-heading {
  /* Dual-colour headings */
  .fl-heading-text {
    strong {
      color: $secondary;
      width: 100%;
    }
  }
}

.fl-module-content {
  blockquote, .blockquote {
    p {
      font-size: $font-size-base * 2;
      line-height: $line-height-base * 0.8;
    }
  }
}

.fl-button-text {
  letter-spacing: $tight-letter-spacing;
}

.fl-module-post-slider {
  .bx-wrapper {
    margin-bottom: 0;
    .fl-post-slider-content {
      * {
        max-width: 1060px;
        margin-left: auto !important;
        margin-right: auto !important;
        // I'm so sorry
      }
      .fl-post-slider-feed-meta {
        font-size: $small-font-size;
      }
      .fl-post-slider-feed-content {
        letter-spacing: $tighter-letter-spacing;
        font-size: $font-size-base * 1.25;
      }
    }
    .bx-controls {
      bottom: 3rem;
      margin-top: 0;
      .bx-pager-item {
        .bx-pager-link {
          background: $gray-500;
          &.active {
            background: $gray-100;
          }
        }
      }
    }
  }
}

.fl-module-heading.sunken {
  z-index: 3;
  position: relative;
  .fl-module-content {
    position: absolute;
    width: calc(100% - 40px);
    .fl-heading:after {
      position: absolute;
      content: '';
      height: 2px;
    /* adjust this to move up and down. you may have to adjust the line height of the paragraph if you move it down a lot. */
      bottom: -16px;
      margin: 0 auto;
      left: 0;
      right: 0;
      width: 60px;
      background: $white;
    }
  }
}

/* Let's Play With Widgets */

iframe {
  border: 0;
  width: 100%;
}

.nb-contact-form {
  h3 { // TODO: this should not be an H3 in markup
    color: #8D8F92;
    font-family: $font-family-sans-serif;
    font-size: $font-size-base;
  }
}

.signup-widget {
  background: $primary;
  padding: $spacer * 1.5 $spacer * 1.5 0 $spacer * 1.5;
  @media screen and (min-width: 768px) {
    background: url('../img/bdp-signup-bg.png');
    background-position: center;
    background-repeat: no-repeat;
    background-color: $primary;
  }
  iframe {
    height: 65px;
  }
  p {
    color: $white;
    @media screen and (min-width: 768px) {
      padding-left: calc(33% + 0.75rem);
    }
  }
}

.signup-popup {
  background: $primary;
  p {
    font-size: $font-size-base * 1.25;
    color: $white;
  }
  iframe {
    height: 65px;
  }
}

// specific overrides when used as an fl-widget
.fl-widget {
  .nb-contact-form {
    padding-left: 0;
    padding-right: 0;
  }
}
/* ... */

